deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jytte
  namespace: jytte
spec:
  selector:
    app: jytte
  ports:
    - name: http
      port: 80
      targetPort: 8080
